# proverbs-cli

./: Cargo.toml  LICENSE  README.md  proverbe.txt
src/: commands.rs  main.rs  proverbs.rs
