[package]
name = "proverbs"
version = "0.1.0"
authors = ["Rares Hanganu rares.hanganur@gmail.com"]
license = "MIT"
description = "A CLI tool for romanian proverbs"
readme = "README.md"
keywords = ["cli", "proverb"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }
