[package]
name = "proverbs-cli"
version = "0.1.1"
authors = ["Rares Hanganu rares.hanganur@gmail.com"]
license = "MIT"
description = "A CLI tool for romanian proverbs"
readme = "README.md"
keywords = ["cli", "proverb"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
rand = "0.9.0"
regex = "1.11.1"
unidecode = "0.3.0"
